refactor : toList 트랜디하게 변경