@@ -1,15 +1,10 @@
 package online.partyrun.partyrunbattleservice.domain.record.repository;
 
-import static org.springframework.data.mongodb.core.aggregation.Aggregation.*;
-import static org.springframework.data.mongodb.core.query.Criteria.where;
-
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
-
 import online.partyrun.partyrunbattleservice.domain.battle.entity.Battle;
 import online.partyrun.partyrunbattleservice.domain.record.entity.RunnerRecord;
-
 import org.bson.Document;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.aggregation.Aggregation;
@@ -18,7 +13,9 @@ import org.springframework.stereotype.Repository;
 import org.springframework.util.Assert;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static org.springframework.data.mongodb.core.aggregation.Aggregation.*;
+import static org.springframework.data.mongodb.core.query.Criteria.where;
 
 @Repository
 @RequiredArgsConstructor
@@ -41,7 +38,7 @@ public class RunnerRecordDao {
 
         return results.getMappedResults().stream()
                 .map(document -> document.getString("id"))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void saveAll(List<RunnerRecord> records) {
